manifests/common/valkey.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  labels:
    app: valkey
spec:
  selector:
    app: valkey
  ports:
    - name: valkey
      port: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: valkey
spec:
  selector:
    matchLabels:
      app: valkey
  serviceName: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:latest
          ports:
            - name: valkey
              containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data/
      volumes:
        - name: data
          emptyDir: {}
