manifests/common/app.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: tls-app
      hosts:
        - "$BASE_URL"
  rules:
    - host: "$BASE_URL"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  name: anubis
---
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  selector:
    app: app
  ports:
    - name: http
      port: 8000
      targetPort: http
    - name: anubis
      port: 8923
      targetPort: anubis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: "$IMAGEAPP"
          ports:
            - name: http
              containerPort: 8000
        - name: anubis
          image: ghcr.io/techarohq/anubis:v1.24.0
          ports:
            - name: anubis
              containerPort: 8923
